# finik-v003

./: .gitignore  CMakeLists.txt  README.md
arduino/: CMakeLists.txt
arduino/include/: arduino.h
arduino/source/: arduino.c
cmake/: toolchain-ch32v00x.cmake
lib/: CMakeLists.txt
src/: main.c
wch/: CMakeLists.txt
wch/Ld/: Link.ld
wch/hal_libraries/bmsis/source/: debug.c
